--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,6 +1,6 @@
 header {
   height: 400px;
-  width: 100;
+  width: 100%;
   background-color: #ffdf00;
   background-image: url("https://www.transparenttextures.com/patterns/batthern.png");
   display: flex;
