--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,3 +24,9 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ main.container {
+  background-color: #f4f1ec;
+  padding-left: 5%;
+  padding-right: 5%;
+ }
