--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -14,6 +14,7 @@ textarea {
 div.buttonCounter {
   font-family: 'Bungee', cursive;
   padding-top: 10px;
+  margin-bottom: 50px;
   display: flex;
   justify-content: space-between;
 }
