--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,3 +1,12 @@
+#warning {
+  margin-top: 30px;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding: 10px;
+  border: 3px solid red;
+  color: red;
+}
+
 form {
   display: flex;
   flex-direction: column;
