--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,6 +1,6 @@
 nav {
   color: #FFFFFF;
-  background-color: #4056A1;
+  background-color: #003566;
   height: 120px;
   display: flex;
   justify-content: space-between;
