--- a/public/styles/article-tweet.css
+++ b/public/styles/article-tweet.css
@@ -5,7 +5,7 @@ article.tweet {
 }
 
 article.tweet:hover {
-  box-shadow: 8px 8px #bcc2da;;
+  box-shadow: 8px 8px #ffc300;;
 }
 
 article.tweet header {
@@ -32,7 +32,7 @@ span img {
 
 span.user {
   font-weight: bold;
-  color: #bcc2da;
+  color: #ffc300;
 }
 
 p.words {
@@ -56,7 +56,7 @@ article.tweet footer {
 }
 
 footer span.icons {
-  color: #4056A1;
+  color: #003566;
   width: 85px;
   display: flex;
   justify-content: space-between;
