--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,7 +2,7 @@ body header {
   height: 400px;
   width: 100%;
   margin-top: 120px;
-  background-color: #ffdf00;
+  background-color: #ffd60a;
   background-image: url("https://www.transparenttextures.com/patterns/batthern.png");
   display: flex;
   flex-direction: column;
