--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -30,7 +30,7 @@ button {
   font-size: 19px;
   width: 80px;
   height: 32px;
-  background-color: #4056A1;
+  background-color: #003566;
   color: #FFFFFF;
   border: none;
 }
